1 - Included contributor and project details. 2 - Included necessary libraries to start.

--- a/ThiagoCosta_ML_CA1.ipynb
+++ b/ThiagoCosta_ML_CA1.ipynb
@@ -1,6 +1,31 @@
 {
  "cells": [
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Name: Thiago de Oliveira da Costa - StId: 2020005\n",
+    "### GitHub:  https://github.com/ThBrasilDaCosta/ML-Firewall-Inc-Traffic"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### Project: Machine Learning Firewall Incoming Traffic."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 1,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "import pandas as pd\n",
+    "import numpy as np"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": null,
    "metadata": {},
