just dropped the index column.

--- a/ThiagoCosta_ML_CA1.ipynb
+++ b/ThiagoCosta_ML_CA1.ipynb
@@ -881,7 +881,7 @@
     "firewall_traffic = firewall_traffic.loc[~firewall_traffic.duplicated(subset=['Source Port', 'Destination Port', 'NAT Source Port',\n",
     "       'NAT Destination Port', 'Bytes', 'Bytes Sent', 'Bytes Received',\n",
     "       'Packets', 'Elapsed Time (sec)', 'pkts_sent', 'pkts_received',\n",
-    "       'Action'])].reset_index().copy()"
+    "       'Action'])].reset_index(drop=True).copy()"
    ]
   },
   {
