--- a/ThiagoCosta_ML_CA1.ipynb
+++ b/ThiagoCosta_ML_CA1.ipynb
@@ -1393,17 +1393,68 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": 15,
    "metadata": {},
    "outputs": [],
    "source": [
-    "from sklearn.preprocessing import LabelEncoder\n",
-    "le = LabelEncoder()"
+    "#from sklearn.preprocessing import LabelEncoder\n",
+    "#le = LabelEncoder()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 16,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "#firewall_traffic = firewall_traffic\n",
+    "#firewall_traffic.Action = le.fit_transform(firewall_traffic.Action)\n",
+    "#firewall_traffic"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 17,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "array(['allow', 'drop', 'deny', 'reset-both'], dtype=object)"
+      ]
+     },
+     "execution_count": 17,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "firewall_traffic['Action'].unique()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 18,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "from sklearn.preprocessing import OneHotEncoder\n",
+    "ohe = OneHotEncoder(sparse=False)\n",
+    "firewall_traffic = ohe.fit_transform(firewall_traffic[['Action']])"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": 19,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "firewall_traffic = pd.DataFrame(firewall_traffic, columns=ohe.categories_[0])"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 20,
    "metadata": {},
    "outputs": [
     {
@@ -1427,95 +1478,47 @@
        "  <thead>\n",
        "    <tr style=\"text-align: right;\">\n",
        "      <th></th>\n",
-       "      <th>Source Port</th>\n",
-       "      <th>Destination Port</th>\n",
-       "      <th>NAT Source Port</th>\n",
-       "      <th>NAT Destination Port</th>\n",
-       "      <th>Bytes</th>\n",
-       "      <th>Bytes Sent</th>\n",
-       "      <th>Bytes Received</th>\n",
-       "      <th>Packets</th>\n",
-       "      <th>Elapsed Time (sec)</th>\n",
-       "      <th>pkts_sent</th>\n",
-       "      <th>pkts_received</th>\n",
-       "      <th>Action</th>\n",
+       "      <th>allow</th>\n",
+       "      <th>deny</th>\n",
+       "      <th>drop</th>\n",
+       "      <th>reset-both</th>\n",
        "    </tr>\n",
        "  </thead>\n",
        "  <tbody>\n",
        "    <tr>\n",
        "      <th>0</th>\n",
-       "      <td>57222</td>\n",
-       "      <td>53</td>\n",
-       "      <td>54587</td>\n",
-       "      <td>53</td>\n",
-       "      <td>177</td>\n",
-       "      <td>94</td>\n",
-       "      <td>83</td>\n",
-       "      <td>2</td>\n",
-       "      <td>30</td>\n",
-       "      <td>1</td>\n",
-       "      <td>1</td>\n",
-       "      <td>0</td>\n",
+       "      <td>1.0</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>0.0</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>1</th>\n",
-       "      <td>56258</td>\n",
-       "      <td>3389</td>\n",
-       "      <td>56258</td>\n",
-       "      <td>3389</td>\n",
-       "      <td>4768</td>\n",
-       "      <td>1600</td>\n",
-       "      <td>3168</td>\n",
-       "      <td>19</td>\n",
-       "      <td>17</td>\n",
-       "      <td>10</td>\n",
-       "      <td>9</td>\n",
-       "      <td>0</td>\n",
+       "      <td>1.0</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>0.0</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>2</th>\n",
-       "      <td>6881</td>\n",
-       "      <td>50321</td>\n",
-       "      <td>43265</td>\n",
-       "      <td>50321</td>\n",
-       "      <td>238</td>\n",
-       "      <td>118</td>\n",
-       "      <td>120</td>\n",
-       "      <td>2</td>\n",
-       "      <td>1199</td>\n",
-       "      <td>1</td>\n",
-       "      <td>1</td>\n",
-       "      <td>0</td>\n",
+       "      <td>1.0</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>0.0</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>3</th>\n",
-       "      <td>50553</td>\n",
-       "      <td>3389</td>\n",
-       "      <td>50553</td>\n",
-       "      <td>3389</td>\n",
-       "      <td>3327</td>\n",
-       "      <td>1438</td>\n",
-       "      <td>1889</td>\n",
-       "      <td>15</td>\n",
-       "      <td>17</td>\n",
-       "      <td>8</td>\n",
-       "      <td>7</td>\n",
-       "      <td>0</td>\n",
+       "      <td>1.0</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>0.0</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>4</th>\n",
-       "      <td>50002</td>\n",
-       "      <td>443</td>\n",
-       "      <td>45848</td>\n",
-       "      <td>443</td>\n",
-       "      <td>25358</td>\n",
-       "      <td>6778</td>\n",
-       "      <td>18580</td>\n",
-       "      <td>31</td>\n",
-       "      <td>16</td>\n",
-       "      <td>13</td>\n",
-       "      <td>18</td>\n",
-       "      <td>0</td>\n",
+       "      <td>1.0</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>0.0</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>...</th>\n",
@@ -1523,158 +1526,62 @@
        "      <td>...</td>\n",
        "      <td>...</td>\n",
        "      <td>...</td>\n",
-       "      <td>...</td>\n",
-       "      <td>...</td>\n",
-       "      <td>...</td>\n",
-       "      <td>...</td>\n",
-       "      <td>...</td>\n",
-       "      <td>...</td>\n",
-       "      <td>...</td>\n",
-       "      <td>...</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>57165</th>\n",
-       "      <td>51710</td>\n",
-       "      <td>43069</td>\n",
-       "      <td>65147</td>\n",
-       "      <td>43069</td>\n",
-       "      <td>70</td>\n",
-       "      <td>70</td>\n",
-       "      <td>0</td>\n",
-       "      <td>2</td>\n",
-       "      <td>8</td>\n",
-       "      <td>2</td>\n",
-       "      <td>0</td>\n",
-       "      <td>0</td>\n",
+       "      <td>1.0</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>0.0</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>57166</th>\n",
-       "      <td>63691</td>\n",
-       "      <td>80</td>\n",
-       "      <td>13237</td>\n",
-       "      <td>80</td>\n",
-       "      <td>314</td>\n",
-       "      <td>192</td>\n",
-       "      <td>122</td>\n",
-       "      <td>6</td>\n",
-       "      <td>15</td>\n",
-       "      <td>4</td>\n",
-       "      <td>2</td>\n",
-       "      <td>0</td>\n",
+       "      <td>1.0</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>0.0</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>57167</th>\n",
-       "      <td>50964</td>\n",
-       "      <td>80</td>\n",
-       "      <td>13485</td>\n",
-       "      <td>80</td>\n",
-       "      <td>4680740</td>\n",
-       "      <td>67312</td>\n",
-       "      <td>4613428</td>\n",
-       "      <td>4675</td>\n",
-       "      <td>77</td>\n",
-       "      <td>985</td>\n",
-       "      <td>3690</td>\n",
-       "      <td>0</td>\n",
+       "      <td>1.0</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>0.0</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>57168</th>\n",
-       "      <td>54871</td>\n",
-       "      <td>445</td>\n",
-       "      <td>0</td>\n",
-       "      <td>0</td>\n",
-       "      <td>70</td>\n",
-       "      <td>70</td>\n",
-       "      <td>0</td>\n",
-       "      <td>1</td>\n",
-       "      <td>0</td>\n",
-       "      <td>1</td>\n",
-       "      <td>0</td>\n",
-       "      <td>2</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>1.0</td>\n",
+       "      <td>0.0</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>57169</th>\n",
-       "      <td>54870</td>\n",
-       "      <td>445</td>\n",
-       "      <td>0</td>\n",
-       "      <td>0</td>\n",
-       "      <td>70</td>\n",
-       "      <td>70</td>\n",
-       "      <td>0</td>\n",
-       "      <td>1</td>\n",
-       "      <td>0</td>\n",
-       "      <td>1</td>\n",
-       "      <td>0</td>\n",
-       "      <td>2</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>1.0</td>\n",
+       "      <td>0.0</td>\n",
        "    </tr>\n",
        "  </tbody>\n",
        "</table>\n",
-       "<p>57170 rows × 12 columns</p>\n",
+       "<p>57170 rows × 4 columns</p>\n",
        "</div>"
       ],
       "text/plain": [
-       "       Source Port  Destination Port  NAT Source Port  NAT Destination Port  \\\n",
-       "0            57222                53            54587                    53   \n",
-       "1            56258              3389            56258                  3389   \n",
-       "2             6881             50321            43265                 50321   \n",
-       "3            50553              3389            50553                  3389   \n",
-       "4            50002               443            45848                   443   \n",
-       "...            ...               ...              ...                   ...   \n",
-       "57165        51710             43069            65147                 43069   \n",
-       "57166        63691                80            13237                    80   \n",
-       "57167        50964                80            13485                    80   \n",
-       "57168        54871               445                0                     0   \n",
-       "57169        54870               445                0                     0   \n",
+       "       allow  deny  drop  reset-both\n",
+       "0        1.0   0.0   0.0         0.0\n",
+       "1        1.0   0.0   0.0         0.0\n",
+       "2        1.0   0.0   0.0         0.0\n",
+       "3        1.0   0.0   0.0         0.0\n",
+       "4        1.0   0.0   0.0         0.0\n",
+       "...      ...   ...   ...         ...\n",
+       "57165    1.0   0.0   0.0         0.0\n",
+       "57166    1.0   0.0   0.0         0.0\n",
+       "57167    1.0   0.0   0.0         0.0\n",
+       "57168    0.0   0.0   1.0         0.0\n",
+       "57169    0.0   0.0   1.0         0.0\n",
        "\n",
-       "         Bytes  Bytes Sent  Bytes Received  Packets  Elapsed Time (sec)  \\\n",
-       "0          177          94              83        2                  30   \n",
-       "1         4768        1600            3168       19                  17   \n",
-       "2          238         118             120        2                1199   \n",
-       "3         3327        1438            1889       15                  17   \n",
-       "4        25358        6778           18580       31                  16   \n",
-       "...        ...         ...             ...      ...                 ...   \n",
-       "57165       70          70               0        2                   8   \n",
-       "57166      314         192             122        6                  15   \n",
-       "57167  4680740       67312         4613428     4675                  77   \n",
-       "57168       70          70               0        1                   0   \n",
-       "57169       70          70               0        1                   0   \n",
-       "\n",
-       "       pkts_sent  pkts_received  Action  \n",
-       "0              1              1       0  \n",
-       "1             10              9       0  \n",
-       "2              1              1       0  \n",
-       "3              8              7       0  \n",
-       "4             13             18       0  \n",
-       "...          ...            ...     ...  \n",
-       "57165          2              0       0  \n",
-       "57166          4              2       0  \n",
-       "57167        985           3690       0  \n",
-       "57168          1              0       2  \n",
-       "57169          1              0       2  \n",
-       "\n",
-       "[57170 rows x 12 columns]"
-      ]
-     },
-     "execution_count": 19,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "firewall_traffic = firewall_traffic\n",
-    "firewall_traffic.Action = le.fit_transform(firewall_traffic.Action)\n",
-    "firewall_traffic"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 20,
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "array([0, 2, 1, 3])"
+       "[57170 rows x 4 columns]"
       ]
      },
      "execution_count": 20,
@@ -1683,32 +1590,8 @@
     }
    ],
    "source": [
-    "firewall_traffic['Action'].unique()"
+    "firewall_traffic"
    ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 22,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "from sklearn.preprocessing import OneHotEncoder\n",
-    "ohe = OneHotEncoder()"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
   },
   {
    "cell_type": "code",
