fully applied one-hot encode.

--- a/ThiagoCosta_ML_CA1.ipynb
+++ b/ThiagoCosta_ML_CA1.ipynb
@@ -1395,27 +1395,6 @@
    "cell_type": "code",
    "execution_count": 15,
    "metadata": {},
-   "outputs": [],
-   "source": [
-    "#from sklearn.preprocessing import LabelEncoder\n",
-    "#le = LabelEncoder()"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 16,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "#firewall_traffic = firewall_traffic\n",
-    "#firewall_traffic.Action = le.fit_transform(firewall_traffic.Action)\n",
-    "#firewall_traffic"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 17,
-   "metadata": {},
    "outputs": [
     {
      "data": {
@@ -1423,7 +1402,7 @@
        "array(['allow', 'drop', 'deny', 'reset-both'], dtype=object)"
       ]
      },
-     "execution_count": 17,
+     "execution_count": 15,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1434,27 +1413,27 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": 16,
    "metadata": {},
    "outputs": [],
    "source": [
     "from sklearn.preprocessing import OneHotEncoder\n",
     "ohe = OneHotEncoder(sparse=False)\n",
-    "firewall_traffic = ohe.fit_transform(firewall_traffic[['Action']])"
+    "ohetransform = ohe.fit_transform(firewall_traffic[['Action']])"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": 17,
    "metadata": {},
    "outputs": [],
    "source": [
-    "firewall_traffic = pd.DataFrame(firewall_traffic, columns=ohe.categories_[0])"
+    "ohetransform = pd.DataFrame(ohetransform, columns=ohe.categories_[0])"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 20,
+   "execution_count": 18,
    "metadata": {},
    "outputs": [
     {
@@ -1584,13 +1563,467 @@
        "[57170 rows x 4 columns]"
       ]
      },
+     "execution_count": 18,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "ohetransform"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 19,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "firewall_traffic = pd.concat([firewall_traffic, ohetransform], axis=1).drop(columns = ['Action'])"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 20,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>Source Port</th>\n",
+       "      <th>Destination Port</th>\n",
+       "      <th>NAT Source Port</th>\n",
+       "      <th>NAT Destination Port</th>\n",
+       "      <th>Bytes</th>\n",
+       "      <th>Bytes Sent</th>\n",
+       "      <th>Bytes Received</th>\n",
+       "      <th>Packets</th>\n",
+       "      <th>Elapsed Time (sec)</th>\n",
+       "      <th>pkts_sent</th>\n",
+       "      <th>pkts_received</th>\n",
+       "      <th>allow</th>\n",
+       "      <th>deny</th>\n",
+       "      <th>drop</th>\n",
+       "      <th>reset-both</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>57222</td>\n",
+       "      <td>53</td>\n",
+       "      <td>54587</td>\n",
+       "      <td>53</td>\n",
+       "      <td>177</td>\n",
+       "      <td>94</td>\n",
+       "      <td>83</td>\n",
+       "      <td>2</td>\n",
+       "      <td>30</td>\n",
+       "      <td>1</td>\n",
+       "      <td>1</td>\n",
+       "      <td>1.0</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>0.0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1</th>\n",
+       "      <td>56258</td>\n",
+       "      <td>3389</td>\n",
+       "      <td>56258</td>\n",
+       "      <td>3389</td>\n",
+       "      <td>4768</td>\n",
+       "      <td>1600</td>\n",
+       "      <td>3168</td>\n",
+       "      <td>19</td>\n",
+       "      <td>17</td>\n",
+       "      <td>10</td>\n",
+       "      <td>9</td>\n",
+       "      <td>1.0</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>0.0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2</th>\n",
+       "      <td>6881</td>\n",
+       "      <td>50321</td>\n",
+       "      <td>43265</td>\n",
+       "      <td>50321</td>\n",
+       "      <td>238</td>\n",
+       "      <td>118</td>\n",
+       "      <td>120</td>\n",
+       "      <td>2</td>\n",
+       "      <td>1199</td>\n",
+       "      <td>1</td>\n",
+       "      <td>1</td>\n",
+       "      <td>1.0</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>0.0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>3</th>\n",
+       "      <td>50553</td>\n",
+       "      <td>3389</td>\n",
+       "      <td>50553</td>\n",
+       "      <td>3389</td>\n",
+       "      <td>3327</td>\n",
+       "      <td>1438</td>\n",
+       "      <td>1889</td>\n",
+       "      <td>15</td>\n",
+       "      <td>17</td>\n",
+       "      <td>8</td>\n",
+       "      <td>7</td>\n",
+       "      <td>1.0</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>0.0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>4</th>\n",
+       "      <td>50002</td>\n",
+       "      <td>443</td>\n",
+       "      <td>45848</td>\n",
+       "      <td>443</td>\n",
+       "      <td>25358</td>\n",
+       "      <td>6778</td>\n",
+       "      <td>18580</td>\n",
+       "      <td>31</td>\n",
+       "      <td>16</td>\n",
+       "      <td>13</td>\n",
+       "      <td>18</td>\n",
+       "      <td>1.0</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>0.0</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "   Source Port  Destination Port  NAT Source Port  NAT Destination Port  \\\n",
+       "0        57222                53            54587                    53   \n",
+       "1        56258              3389            56258                  3389   \n",
+       "2         6881             50321            43265                 50321   \n",
+       "3        50553              3389            50553                  3389   \n",
+       "4        50002               443            45848                   443   \n",
+       "\n",
+       "   Bytes  Bytes Sent  Bytes Received  Packets  Elapsed Time (sec)  pkts_sent  \\\n",
+       "0    177          94              83        2                  30          1   \n",
+       "1   4768        1600            3168       19                  17         10   \n",
+       "2    238         118             120        2                1199          1   \n",
+       "3   3327        1438            1889       15                  17          8   \n",
+       "4  25358        6778           18580       31                  16         13   \n",
+       "\n",
+       "   pkts_received  allow  deny  drop  reset-both  \n",
+       "0              1    1.0   0.0   0.0         0.0  \n",
+       "1              9    1.0   0.0   0.0         0.0  \n",
+       "2              1    1.0   0.0   0.0         0.0  \n",
+       "3              7    1.0   0.0   0.0         0.0  \n",
+       "4             18    1.0   0.0   0.0         0.0  "
+      ]
+     },
      "execution_count": 20,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "firewall_traffic"
+    "firewall_traffic.head()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 21,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>Source Port</th>\n",
+       "      <th>Destination Port</th>\n",
+       "      <th>NAT Source Port</th>\n",
+       "      <th>NAT Destination Port</th>\n",
+       "      <th>Bytes</th>\n",
+       "      <th>Bytes Sent</th>\n",
+       "      <th>Bytes Received</th>\n",
+       "      <th>Packets</th>\n",
+       "      <th>Elapsed Time (sec)</th>\n",
+       "      <th>pkts_sent</th>\n",
+       "      <th>pkts_received</th>\n",
+       "      <th>allow</th>\n",
+       "      <th>deny</th>\n",
+       "      <th>drop</th>\n",
+       "      <th>reset-both</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>57160</th>\n",
+       "      <td>54013</td>\n",
+       "      <td>37965</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>66</td>\n",
+       "      <td>66</td>\n",
+       "      <td>0</td>\n",
+       "      <td>1</td>\n",
+       "      <td>0</td>\n",
+       "      <td>1</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>1.0</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>0.0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>57161</th>\n",
+       "      <td>49783</td>\n",
+       "      <td>445</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>70</td>\n",
+       "      <td>70</td>\n",
+       "      <td>0</td>\n",
+       "      <td>1</td>\n",
+       "      <td>0</td>\n",
+       "      <td>1</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>1.0</td>\n",
+       "      <td>0.0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>57162</th>\n",
+       "      <td>55142</td>\n",
+       "      <td>26467</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>66</td>\n",
+       "      <td>66</td>\n",
+       "      <td>0</td>\n",
+       "      <td>1</td>\n",
+       "      <td>0</td>\n",
+       "      <td>1</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>1.0</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>0.0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>57163</th>\n",
+       "      <td>53848</td>\n",
+       "      <td>36237</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>62</td>\n",
+       "      <td>62</td>\n",
+       "      <td>0</td>\n",
+       "      <td>1</td>\n",
+       "      <td>0</td>\n",
+       "      <td>1</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>1.0</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>0.0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>57164</th>\n",
+       "      <td>65323</td>\n",
+       "      <td>53</td>\n",
+       "      <td>33275</td>\n",
+       "      <td>53</td>\n",
+       "      <td>356</td>\n",
+       "      <td>118</td>\n",
+       "      <td>238</td>\n",
+       "      <td>2</td>\n",
+       "      <td>30</td>\n",
+       "      <td>1</td>\n",
+       "      <td>1</td>\n",
+       "      <td>1.0</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>0.0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>57165</th>\n",
+       "      <td>51710</td>\n",
+       "      <td>43069</td>\n",
+       "      <td>65147</td>\n",
+       "      <td>43069</td>\n",
+       "      <td>70</td>\n",
+       "      <td>70</td>\n",
+       "      <td>0</td>\n",
+       "      <td>2</td>\n",
+       "      <td>8</td>\n",
+       "      <td>2</td>\n",
+       "      <td>0</td>\n",
+       "      <td>1.0</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>0.0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>57166</th>\n",
+       "      <td>63691</td>\n",
+       "      <td>80</td>\n",
+       "      <td>13237</td>\n",
+       "      <td>80</td>\n",
+       "      <td>314</td>\n",
+       "      <td>192</td>\n",
+       "      <td>122</td>\n",
+       "      <td>6</td>\n",
+       "      <td>15</td>\n",
+       "      <td>4</td>\n",
+       "      <td>2</td>\n",
+       "      <td>1.0</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>0.0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>57167</th>\n",
+       "      <td>50964</td>\n",
+       "      <td>80</td>\n",
+       "      <td>13485</td>\n",
+       "      <td>80</td>\n",
+       "      <td>4680740</td>\n",
+       "      <td>67312</td>\n",
+       "      <td>4613428</td>\n",
+       "      <td>4675</td>\n",
+       "      <td>77</td>\n",
+       "      <td>985</td>\n",
+       "      <td>3690</td>\n",
+       "      <td>1.0</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>0.0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>57168</th>\n",
+       "      <td>54871</td>\n",
+       "      <td>445</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>70</td>\n",
+       "      <td>70</td>\n",
+       "      <td>0</td>\n",
+       "      <td>1</td>\n",
+       "      <td>0</td>\n",
+       "      <td>1</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>1.0</td>\n",
+       "      <td>0.0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>57169</th>\n",
+       "      <td>54870</td>\n",
+       "      <td>445</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>70</td>\n",
+       "      <td>70</td>\n",
+       "      <td>0</td>\n",
+       "      <td>1</td>\n",
+       "      <td>0</td>\n",
+       "      <td>1</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>1.0</td>\n",
+       "      <td>0.0</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "       Source Port  Destination Port  NAT Source Port  NAT Destination Port  \\\n",
+       "57160        54013             37965                0                     0   \n",
+       "57161        49783               445                0                     0   \n",
+       "57162        55142             26467                0                     0   \n",
+       "57163        53848             36237                0                     0   \n",
+       "57164        65323                53            33275                    53   \n",
+       "57165        51710             43069            65147                 43069   \n",
+       "57166        63691                80            13237                    80   \n",
+       "57167        50964                80            13485                    80   \n",
+       "57168        54871               445                0                     0   \n",
+       "57169        54870               445                0                     0   \n",
+       "\n",
+       "         Bytes  Bytes Sent  Bytes Received  Packets  Elapsed Time (sec)  \\\n",
+       "57160       66          66               0        1                   0   \n",
+       "57161       70          70               0        1                   0   \n",
+       "57162       66          66               0        1                   0   \n",
+       "57163       62          62               0        1                   0   \n",
+       "57164      356         118             238        2                  30   \n",
+       "57165       70          70               0        2                   8   \n",
+       "57166      314         192             122        6                  15   \n",
+       "57167  4680740       67312         4613428     4675                  77   \n",
+       "57168       70          70               0        1                   0   \n",
+       "57169       70          70               0        1                   0   \n",
+       "\n",
+       "       pkts_sent  pkts_received  allow  deny  drop  reset-both  \n",
+       "57160          1              0    0.0   1.0   0.0         0.0  \n",
+       "57161          1              0    0.0   0.0   1.0         0.0  \n",
+       "57162          1              0    0.0   1.0   0.0         0.0  \n",
+       "57163          1              0    0.0   1.0   0.0         0.0  \n",
+       "57164          1              1    1.0   0.0   0.0         0.0  \n",
+       "57165          2              0    1.0   0.0   0.0         0.0  \n",
+       "57166          4              2    1.0   0.0   0.0         0.0  \n",
+       "57167        985           3690    1.0   0.0   0.0         0.0  \n",
+       "57168          1              0    0.0   0.0   1.0         0.0  \n",
+       "57169          1              0    0.0   0.0   1.0         0.0  "
+      ]
+     },
+     "execution_count": 21,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "firewall_traffic.tail(10)"
    ]
   },
   {
