--- a/ThiagoCosta_ML_CA1.ipynb
+++ b/ThiagoCosta_ML_CA1.ipynb
@@ -2868,6 +2868,141 @@
   },
   {
    "cell_type": "code",
+   "execution_count": 22,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "Index(['Source Port', 'Destination Port', 'NAT Source Port',\n",
+       "       'NAT Destination Port', 'Bytes', 'Bytes Sent', 'Bytes Received',\n",
+       "       'Packets', 'Elapsed Time (sec)', 'pkts_sent', 'pkts_received', 'allow',\n",
+       "       'deny', 'drop', 'reset-both'],\n",
+       "      dtype='object')"
+      ]
+     },
+     "execution_count": 22,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "firewall_traffic.columns"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "##### Decision Tree ML model:"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 23,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "independent_features = ['Source Port', 'Destination Port', 'NAT Source Port',\n",
+    "       'NAT Destination Port', 'Bytes', 'Bytes Sent', 'Bytes Received',\n",
+    "       'Packets', 'Elapsed Time (sec)', 'pkts_sent', 'pkts_received']\n",
+    "\n",
+    "dependent_features = ['allow', 'deny', 'drop', 'reset-both']\n",
+    "\n",
+    "X = firewall_traffic[independent_features]\n",
+    "y = firewall_traffic[dependent_features]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 24,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "       Source Port  Destination Port  NAT Source Port  NAT Destination Port  \\\n",
+      "0            57222                53            54587                    53   \n",
+      "1            56258              3389            56258                  3389   \n",
+      "2             6881             50321            43265                 50321   \n",
+      "3            50553              3389            50553                  3389   \n",
+      "4            50002               443            45848                   443   \n",
+      "...            ...               ...              ...                   ...   \n",
+      "57165        51710             43069            65147                 43069   \n",
+      "57166        63691                80            13237                    80   \n",
+      "57167        50964                80            13485                    80   \n",
+      "57168        54871               445                0                     0   \n",
+      "57169        54870               445                0                     0   \n",
+      "\n",
+      "         Bytes  Bytes Sent  Bytes Received  Packets  Elapsed Time (sec)  \\\n",
+      "0          177          94              83        2                  30   \n",
+      "1         4768        1600            3168       19                  17   \n",
+      "2          238         118             120        2                1199   \n",
+      "3         3327        1438            1889       15                  17   \n",
+      "4        25358        6778           18580       31                  16   \n",
+      "...        ...         ...             ...      ...                 ...   \n",
+      "57165       70          70               0        2                   8   \n",
+      "57166      314         192             122        6                  15   \n",
+      "57167  4680740       67312         4613428     4675                  77   \n",
+      "57168       70          70               0        1                   0   \n",
+      "57169       70          70               0        1                   0   \n",
+      "\n",
+      "       pkts_sent  pkts_received  \n",
+      "0              1              1  \n",
+      "1             10              9  \n",
+      "2              1              1  \n",
+      "3              8              7  \n",
+      "4             13             18  \n",
+      "...          ...            ...  \n",
+      "57165          2              0  \n",
+      "57166          4              2  \n",
+      "57167        985           3690  \n",
+      "57168          1              0  \n",
+      "57169          1              0  \n",
+      "\n",
+      "[57170 rows x 11 columns]\n"
+     ]
+    }
+   ],
+   "source": [
+    "print(X)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 25,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "       allow  deny  drop  reset-both\n",
+      "0        1.0   0.0   0.0         0.0\n",
+      "1        1.0   0.0   0.0         0.0\n",
+      "2        1.0   0.0   0.0         0.0\n",
+      "3        1.0   0.0   0.0         0.0\n",
+      "4        1.0   0.0   0.0         0.0\n",
+      "...      ...   ...   ...         ...\n",
+      "57165    1.0   0.0   0.0         0.0\n",
+      "57166    1.0   0.0   0.0         0.0\n",
+      "57167    1.0   0.0   0.0         0.0\n",
+      "57168    0.0   0.0   1.0         0.0\n",
+      "57169    0.0   0.0   1.0         0.0\n",
+      "\n",
+      "[57170 rows x 4 columns]\n"
+     ]
+    }
+   ],
+   "source": [
+    "print(y)"
+   ]
+  },
+  {
+   "cell_type": "code",
    "execution_count": null,
    "metadata": {},
    "outputs": [],
