--- a/ThiagoCosta_ML_CA1.ipynb
+++ b/ThiagoCosta_ML_CA1.ipynb
@@ -1367,7 +1367,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "##### Robust Scaler"
+    "##### Robust Scaler, Z-Score, Ou"
    ]
   },
   {
