Have done an analysis on the Decision Tree Classifier model.

--- a/ThiagoCosta_ML_CA1.ipynb
+++ b/ThiagoCosta_ML_CA1.ipynb
@@ -4217,14 +4217,23 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "###### After applying Robust scaler, MinMax Scaler and dropping outliers and missing values."
+    "###### After applying Robust scaler, MinMax Scaler and dropping outliers and missing values, accuracy has dropped a bit but not  bellow 0.99 which is still great."
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": null,
+   "cell_type": "markdown",
    "metadata": {},
-   "outputs": [],
+   "source": [
+    "###### Decison Tree Classifier model analysis:\n",
+    "Precision:  For the majority of classes (0, 1, and 2), the precision is close to 1.0, indicating that the classifier has a low false positive rate in these categories. Still, class 3 has a lower precision of 0.33, indicating that there are more false positives in this class.\n",
+    "Recall: The classifier successfully recognizes the majority of cases of classes 0 and 2, as seen by the high recall for these classes. The classifier misses some cases of classes 1 and 3, though, as seen by the lower recall for these classes.\n",
+    "F1-Score: The F1-score is calculated by taking the harmonic mean of precision and recall. For classes 0 and 2, the F1-score is high, indicating a strong balance of precision and recall. But the F1-score is lower for classes 1 and 3, indicating that the precision-to-recall ratio is not excellent.\n",
+    "Accuracy: The model's overall accuracy is 1.00, which means that all cases in the test set are properly classified."
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
    "source": []
   }
  ],
