--- a/ThiagoCosta_ML_CA1.ipynb
+++ b/ThiagoCosta_ML_CA1.ipynb
@@ -4353,8 +4353,15 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "As both models apparently have a high accuracy, the Random Forest Classifier (RF) has a slightly mean accurancy and narrower standard deviation in cross validation scores, comparing with the results of Decision Tree Classifier. For that reason Random Forest Classifier is the chosen model as appears to have more stability in performance of the trainning data. "
+   ]
+  },
+  {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 89,
    "metadata": {},
    "outputs": [],
    "source": []
