Performed a classification performance on both train and test subsets through the RF model for comparence.

--- a/ThiagoCosta_ML_CA1.ipynb
+++ b/ThiagoCosta_ML_CA1.ipynb
@@ -4356,29 +4356,99 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
+    "###### Chosen model:\n",
     "As both models apparently have a high accuracy, the Random Forest Classifier (RF) has a slightly mean accurancy and narrower standard deviation in cross validation scores, comparing with the results of Decision Tree Classifier. For that reason Random Forest Classifier is the chosen model as appears to have more stability in performance of the trainning data. "
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 89,
+   "execution_count": 91,
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "y_pred_train_rf = rf.predict(X_train)\n",
+    "train_accuracy = accuracy_score(y_train, y_pred_train_rf)\n",
+    "train_classif_report = classification_report(y_train, y_pred_train_rf)"
+   ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 92,
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "test_accuracy = accuracy_score(y_test, y_pred_rf)\n",
+    "test_classif_report = classification_report(y_test, y_pred_rf)"
+   ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 93,
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Random Forest Classifier Performance on Training Set:\n",
+      "Training Accuracy: 0.9999\n",
+      "Training Classification Report:\n",
+      "              precision    recall  f1-score   support\n",
+      "\n",
+      "           0       1.00      1.00      1.00     23168\n",
+      "           1       1.00      1.00      1.00      5064\n",
+      "           2       1.00      1.00      1.00      7314\n",
+      "           3       1.00      1.00      1.00        40\n",
+      "\n",
+      "    accuracy                           1.00     35586\n",
+      "   macro avg       1.00      1.00      1.00     35586\n",
+      "weighted avg       1.00      1.00      1.00     35586\n",
+      "\n",
+      "\n",
+      "\n"
+     ]
+    }
+   ],
+   "source": [
+    "print(\"Random Forest Classifier Performance on Training subset 80%:\")\n",
+    "print(f\"Training Accuracy: {train_accuracy:.4f}\")\n",
+    "print(\"Training Classification Report:\")\n",
+    "print(train_classif_report)\n",
+    "print(\"\\n\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 94,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Random Forest Classifier Performance on Test Set:\n",
+      "Test Accuracy: 0.9966\n",
+      "Test Classification Report:\n",
+      "              precision    recall  f1-score   support\n",
+      "\n",
+      "           0       1.00      1.00      1.00      5792\n",
+      "           1       0.99      0.99      0.99      1279\n",
+      "           2       1.00      1.00      1.00      1818\n",
+      "           3       0.00      0.00      0.00         8\n",
+      "\n",
+      "    accuracy                           1.00      8897\n",
+      "   macro avg       0.75      0.75      0.75      8897\n",
+      "weighted avg       1.00      1.00      1.00      8897\n",
+      "\n"
+     ]
+    }
+   ],
+   "source": [
+    "print(\"Random Forest Classifier Performance on Test subset 20%:\")\n",
+    "print(f\"Test Accuracy: {test_accuracy:.4f}\")\n",
+    "print(\"Test Classification Report:\")\n",
+    "print(test_classif_report)"
+   ]
   },
   {
    "cell_type": "code",
